add pronostic list

--- a/src/App.css
+++ b/src/App.css
@@ -10,3 +10,9 @@ html, body {
   text-align: center;
 }
 
+.ligne {
+  height: 1px;
+  width: 100%;
+  background: #F2F2F2;
+  margin-bottom: 20px;
+}
