--- a/src/components/PronoisticForm/PronosticForm.css
+++ b/src/components/PronoisticForm/PronosticForm.css
@@ -1,6 +1,10 @@
 form {
+    margin: auto;
     display: flex;
     flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    max-width: 800px;
 }
 
 form>div {
